--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,11 @@
     "lib/template",
     "lib/data-structure",
     "lib/math",
+    "lib/string",
     "lib/template",
     "test/oj-verify/data-structure",
     "test/oj-verify/math",
+    "test/oj-verify/string",
     "test/unittest/data-structure",
     "test/unittest/math",
   ],
