add Rolling Hash

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
     "test/unittest/data-structure",
     "test/unittest/graph",
     "test/unittest/math",
+    "test/unittest/string",
+    "sandbox/src",
   ],
   "java.project.outputPath": "bin",
   "java.project.referencedLibraries": [
